# yt2text

./: .env.dist  README.md  bot.py  pyproject.toml  requirements.txt
tgbot/: config.py
tgbot/handlers/: __init__.py  admin.py  simple_menu.py  user.py
tgbot/keyboards/: reply.py
tgbot/messages/: handlers_msg.py
tgbot/misc/: notify_admins.py
tgbot/services/: broadcaster.py  get_transcription.py
